Fix: fixed horizontal scrolling in sidebar

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1181,7 +1181,7 @@ div#hs-eu-cookie-confirmation div#hs-eu-cookie-confirmation-inner a#hs-eu-cookie
     z-index: 0;
     top: 1.5rem;
     opacity: 0;
-    width: 320px;
+    width: 304px;
     box-sizing: border-box;
     pointer-events: none;
     transition: opacity ease 100ms, transform ease 300ms;
@@ -1192,7 +1192,7 @@ div#hs-eu-cookie-confirmation div#hs-eu-cookie-confirmation-inner a#hs-eu-cookie
     opacity: 1;
     pointer-events: auto;
     background-color: 'var(--docs_bg_content)';
-    width: 320px;
+    width: 304px;
     z-index: 10;
     transform: translateX(0%);
 }
